--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,15 @@ services:
       MYSQL_ROOT_PASSWORD: secret
     ports:
       - "3306:3306"
+
+ cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass secret
+    volumes: 
+      - cache:/data
+volumes:
+  cache:
+    driver: local
