--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "typeorm": "^0.3.11",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
