--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,8 @@
 version: '3.8'
 services:
+ 
+
+ 
  database:
     image: mysql:5.7
     volumes:
@@ -19,6 +22,13 @@ services:
     command: redis-server --save 20 1 --loglevel warning --requirepass secret
     volumes: 
       - cache:/data
+ app:
+    build: .
+    ports:
+      - "3000:3000"
+    depends_on:
+      - "database"
+      - "cache"
 volumes:
   cache:
     driver: local
